# simple_orm

./: .gitignore  README.md  pyproject.toml
simple_orm/: __init__.py  class_writer.py  db_context.py  entity.py  entity_meta.py  field.py  file_writer.py  foreign_key.py  generate_dbconext.py  generate_dto.py  generate_entities.py  key_words.py  query.py  relationship.py  schema_metadata.py  single_relationship.py  table.py
